@@ -2,6 +2,7 @@ package com.funtarget.backend.api;
 
 import com.funtarget.backend.supabase.SupabaseAdminService;
 import com.funtarget.backend.supabase.SupabaseAdminService.DuplicateUserException;
+import com.funtarget.backend.supabase.SupabaseAdminService.SupabaseAdminException;
 import com.funtarget.backend.supabase.SupabaseRestService;
 import com.funtarget.backend.supabase.SupabaseUser;
 import java.time.OffsetDateTime;
@@ -9,6 +10,7 @@ import java.util.Map;
 import java.util.regex.Pattern;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.core.Authentication;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -38,7 +40,7 @@ public class AdminUsersController {
     }
 
     String username = payload == null ? null : String.valueOf(payload.getOrDefault("username", "")).trim();
-    String password = payload == null ? null : String.valueOf(payload.getOrDefault("password", "")).trim();
+    String password = payload == null ? "" : String.valueOf(payload.getOrDefault("password", ""));
     String role = SupabaseRestService.normalizeUserRole(payload == null ? null : payload.getOrDefault("role", "PLAYER"));
     Object endsAtObj = payload == null ? null : payload.get("ends_at");
     String endsAt = endsAtObj == null ? "" : String.valueOf(endsAtObj).trim();
@@ -51,6 +53,7 @@ public class AdminUsersController {
     if (!USERNAME_PATTERN.matcher(normalized).matches()) {
       throw new IllegalArgumentException("Invalid username (use 3-32 chars: a-z, 0-9, . _ -)");
     }
+    requirePasswordPolicy(password, true);
 
     Map<String, Object> existingAccess = supabaseRest.getUserAccessByUsernameServiceRole(normalized);
     if (existingAccess != null && existingAccess.get("user_id") != null) {
@@ -143,35 +146,51 @@ public class AdminUsersController {
 
     String username = payload == null ? "" : String.valueOf(payload.getOrDefault("username", "")).trim();
     String password = payload == null ? "" : String.valueOf(payload.getOrDefault("password", ""));
-    boolean updateUsername = !username.isBlank();
-    boolean updatePassword = !password.isBlank();
-    if (!updateUsername && !updatePassword) {
-      throw new IllegalArgumentException("No user fields to update");
-    }
+    boolean wantsUsernameUpdate = !username.isBlank();
+    boolean updatePassword = !password.trim().isEmpty();
 
     Map<String, Object> currentAccess = supabaseRest.getUserAccessByUserIdServiceRole(userId);
     if (currentAccess == null || currentAccess.get("user_id") == null) {
       throw new IllegalArgumentException("User access row not found");
     }
 
-    String normalized = null;
+    String currentUsername = String.valueOf(currentAccess.getOrDefault("username", "")).trim().toLowerCase();
+    String normalized = currentUsername;
     String email = null;
-    if (updateUsername) {
+    boolean updateUsername = false;
+    if (wantsUsernameUpdate) {
       normalized = username.toLowerCase();
       if (!USERNAME_PATTERN.matcher(normalized).matches()) {
         throw new IllegalArgumentException("Invalid username (use 3-32 chars: a-z, 0-9, . _ -)");
       }
-      Map<String, Object> existingAccess = supabaseRest.getUserAccessByUsernameServiceRole(normalized);
-      if (existingAccess != null && existingAccess.get("user_id") != null) {
-        String existingUserId = String.valueOf(existingAccess.get("user_id"));
-        if (!existingUserId.equals(userId)) {
-          throw new IllegalArgumentException("Username already exists");
+      if (!normalized.equals(currentUsername)) {
+        Map<String, Object> existingAccess = supabaseRest.getUserAccessByUsernameServiceRole(normalized);
+        if (existingAccess != null && existingAccess.get("user_id") != null) {
+          String existingUserId = String.valueOf(existingAccess.get("user_id"));
+          if (!existingUserId.equals(userId)) {
+            throw new IllegalArgumentException("Username already exists");
+          }
         }
+        email = normalized + "@kingmaker.local";
+        updateUsername = true;
       }
-      email = normalized + "@kingmaker.local";
+    }
+    if (updatePassword) {
+      requirePasswordPolicy(password, false);
+    }
+    if (!updateUsername && !updatePassword) {
+      throw new IllegalArgumentException("Change username or enter a new password");
     }
 
-    SupabaseUser updatedAuth = supabaseAdmin.updateUser(userId, email, updatePassword ? password : null);
+    SupabaseUser updatedAuth;
+    try {
+      updatedAuth = supabaseAdmin.updateUser(userId, updateUsername ? email : null, updatePassword ? password : null);
+    } catch (DuplicateUserException e) {
+      throw e;
+    } catch (SupabaseAdminException e) {
+      throw new IllegalArgumentException(friendlyAdminUpdateFailure(e));
+    }
+
     Map<String, Object> updatedAccess = currentAccess;
     if (updateUsername) {
       updatedAccess = supabaseRest.patchUserAccessServiceRole(userId, Map.of("username", normalized));
@@ -197,8 +216,65 @@ public class AdminUsersController {
         "updated", true,
         "id", userId,
         "email", updatedAuth == null || updatedAuth.email() == null ? "" : updatedAuth.email(),
-        "username", updateUsername ? normalized : String.valueOf(currentAccess.getOrDefault("username", "")),
+        "username", normalized == null ? "" : normalized,
         "row", updatedAccess == null ? Map.of() : updatedAccess);
+  }
+
+  @DeleteMapping("/users/{userId}")
+  public Map<String, Object> deleteUser(Authentication authentication, @PathVariable("userId") String userId) {
+    SupabaseUser caller = requireUser(authentication);
+    String accessToken = requireBearer(authentication);
+    if (!supabaseRest.isAdmin(accessToken, caller.id())) {
+      throw new AccessDeniedException("Forbidden");
+    }
+    if (userId == null || userId.isBlank()) {
+      throw new IllegalArgumentException("userId is required");
+    }
+    if (caller.id().equals(userId)) {
+      throw new IllegalArgumentException("You cannot delete the signed-in admin account");
+    }
+
+    Map<String, Object> currentAccess = supabaseRest.getUserAccessByUserIdServiceRole(userId);
+    if (currentAccess == null || currentAccess.get("user_id") == null) {
+      throw new IllegalArgumentException("User access row not found");
+    }
+    String username = String.valueOf(currentAccess.getOrDefault("username", ""));
+    if (supabaseRest.isAdminServiceRole(userId)
+        || "ADMIN".equals(SupabaseRestService.normalizeUserRole(currentAccess.get("role")))) {
+      throw new IllegalArgumentException("Admin users cannot be deleted");
+    }
+
+    try {
+      supabaseRest.insertAuditLogServiceRole(
+          caller.id(), "ADMIN", "admin_delete_user", userId, Map.of("username", username));
+    } catch (Exception ignored) {
+    }
+    supabaseAdmin.deleteUser(userId);
+    return Map.of("deleted", true, "id", userId, "username", username);
+  }
+
+  private static void requirePasswordPolicy(String password, boolean required) {
+    if (password == null || password.trim().isEmpty()) {
+      if (required) throw new IllegalArgumentException("Password is required");
+      return;
+    }
+    if (password.length() < 6) {
+      throw new IllegalArgumentException("Password must be at least 6 characters");
+    }
+  }
+
+  private static String friendlyAdminUpdateFailure(SupabaseAdminException e) {
+    String body = e.responseBody() == null ? "" : e.responseBody().toLowerCase();
+    if (body.contains("password")) {
+      return "Password does not meet requirements";
+    }
+    if (body.contains("email") || body.contains("user")) {
+      return "Username could not be updated. Please choose another username.";
+    }
+    if (e.statusCode() == 429) {
+      return "User service is busy. Please retry in a minute.";
+    }
+    return "Unable to update user. Please retry.";
   }
 
   private static SupabaseUser requireUser(Authentication authentication) {
